--- a/assets/landing/css/fontawesome/scss/_icons.scss
+++ b/assets/landing/css/fontawesome/scss/_icons.scss
@@ -881,7 +881,7 @@ readers do not read off random characters that represent icons */
 .#{$fa-css-prefix}-nutritionix:before { content: fa-content($fa-var-nutritionix); }
 .#{$fa-css-prefix}-object-group:before { content: fa-content($fa-var-object-group); }
 .#{$fa-css-prefix}-object-ungroup:before { content: fa-content($fa-var-object-ungroup); }
-.#{$fa-css-prefix}-odnoklassnipi:before { content: fa-content($fa-var-odnoklassnipi); }
+.#{$fa-css-prefix}-odnoklassniki:before { content: fa-content($fa-var-odnoklassniki); }
 .#{$fa-css-prefix}-odnoklassniki-square:before { content: fa-content($fa-var-odnoklassniki-square); }
 .#{$fa-css-prefix}-oil-can:before { content: fa-content($fa-var-oil-can); }
 .#{$fa-css-prefix}-old-republic:before { content: fa-content($fa-var-old-republic); }
