--- a/assets/landing/css/fontawesome/scss/_variables.scss
+++ b/assets/landing/css/fontawesome/scss/_variables.scss
@@ -898,8 +898,8 @@ $fa-var-ns8: \f3d5;
 $fa-var-nutritionix: \f3d6;
 $fa-var-object-group: \f247;
 $fa-var-object-ungroup: \f248;
-$fa-var-odnoklassnipi: \f263;
-$fa-var-odnoklassnipi-square: \f264;
+$fa-var-odnoklassniki: \f263;
+$fa-var-odnoklassniki-square: \f264;
 $fa-var-oil-can: \f613;
 $fa-var-old-republic: \f510;
 $fa-var-om: \f679;
